--- a/src/main/resources/templates/subject/add.html
+++ b/src/main/resources/templates/subject/add.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;">
+  <div class="row" style="margin-top:50px;" id="app">
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">新建主题</a>
@@ -14,20 +14,52 @@
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">主题名称</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入主题名称...">
+            <input v-model="name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入主题名称...">
           </div>
           <div class="form-group">
             <label for="exampleFormControlTextarea1">主题简介</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="请输入主题简介...(300字以内)"></textarea>
+            <textarea v-model="intro" class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="请输入主题简介...(300字以内)"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+          <button v-on:click="addSubject" type="button" class="btn btn-primary btn-sm">提交</button>
         </form>
+        <div v-if="messageShow" class="alert alert-success mt-2" role="alert">
+          {{message}}
+        </div>
       </div>
     </div>
   </div>
 </div>
 <script>
-
+var app = new Vue({
+  el: '#app',
+  data: {
+    name: '',
+    intro:'',
+    message:'',
+    messageShow:false
+  },
+  methods: {
+    addSubject: function () {
+      this.$http.post('/subject/add', {
+        name:this.name,
+        intro:this.intro
+      }, {emulateJSON: true}).then(response => {
+        console.log(response.body)
+        if(response.body.success) {
+            this.messageShow = true;
+            this.message = response.body.msg;
+        } else {
+            this.messageShow = true;
+            this.message = response.body.msg;
+        }
+      }, response => {
+        this.errorShow = true;
+        this.successShow = false;
+        this.message = '网络异常'
+      });
+    }
+  }
+})
 </script>
 </body>
 </html>
