--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -23,7 +23,7 @@
               设置
             </button>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">删除</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delModal">删除</a>
               <a class="dropdown-item" href="#">编辑</a>
             </div>
           </div>
@@ -45,6 +45,52 @@
           </li>
         </ul>
       </nav>
+
+      <!-- Button trigger modal -->
+      <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#delModal">-->
+        <!--Launch demo modal-->
+      <!--</button>-->
+
+      <!-- Modal -->
+      <div class="modal" id="delModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              确定删除该专题吗？
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+              <button type="button" class="btn btn-primary" v-on:click="delSubject">确定</button>
+            </div>
+          </div>
+        </div>
+      </div><!-- Modal -->
+      <!-- Modal -->
+      <div class="modal" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              确定删除该专题吗？Varying modal content-用这个
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+              <button type="button" class="btn btn-primary" v-on:click="delSubject">确定</button>
+            </div>
+          </div>
+        </div>
+      </div><!-- Modal -->
     </div>
   </div>
 </div>
