--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -7,11 +7,11 @@
   <div class="row" id="app" style="margin-top:150px;">
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
-        <a class="navbar-brand" href="#">主题列表</a>
+        <botton class="navbar-brand">主题列表</botton>
         <a href="/subject/add" class="btn btn-warning btn-sm">新建主题</a>
       </nav>
-      <div v-if="subjects.content == 0">
-        暂无专题
+      <div v-if="subjects.content == 0" class="text-secondary">
+        本页暂无专题
       </div>
       <div class="card" v-for="subject in subjects.content">
         <div class="card-body">
@@ -84,19 +84,18 @@
         <!--模态框-->
       </div>
       <br>
-      <!--分也开始-->
+
+      <!--分页开始-->
       <nav aria-label="...">
         <ul class="pagination pagination-sm">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Previous</a>
+          <li class="page-item" :class="subjects.first ? 'disabled' : ''">
+            <botton class="page-link" @click="pagechange(subjects.number - 1)" tabindex="-1">上页</botton>
           </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item active">
-            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+          <li v-for="n in subjects.totalPages" class="page-item" :class="subjects.number+1 == n ? 'active' : ''">
+            <botton class="page-link" @click="subjects.number+1 == n ? '' : pagechange(n-1)">{{n}}</botton>
           </li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
+          <li class="page-item" :class="subjects.last ? 'disabled' : ''">
+            <botton class="page-link" @click="pagechange(subjects.number + 1)">下页</botton>
           </li>
         </ul>
       </nav><!--分页结束-->
@@ -110,8 +109,8 @@ var app = new Vue({
   el: '#app',
   data: {
     subjects:{},
-    page: 1,
-    size: 10,
+    page: 0,
+    size: 2,
     pageAll:'',
     message:'',
     messageShow:false
@@ -136,12 +135,15 @@ var app = new Vue({
       });
   },
   methods: {
-    page: function () {
+    pagechange: function (pagenum) {
+      console.log(pagenum)
       this.$http.post('/subject/list', {
-        page:this.page
+        page:pagenum,
+        size:this.size
       }, {emulateJSON: true}).then(response => {
         console.log(response.body)
         if(response.body.success) {
+            this.subjects = response.body.obj;
             this.messageShow = true;
             this.message = response.body.msg;
         } else {
@@ -163,8 +165,8 @@ var app = new Vue({
                 this.messageShow = true;
                 this.message = response.body.msg;
                 $('#delModal'+subject.id).modal('hide');
-                var index = this.subjects.indexOf(subject);
-                if (index !== -1) this.subjects.splice(index, 1);
+                var index = this.subjects.content.indexOf(subject);
+                if (index !== -1) this.subjects.content.splice(index, 1);
                 $('.alert').show();
                 $('.alert').alert();
             } else {
