--- a/src/main/resources/templates/cheat/edit.html
+++ b/src/main/resources/templates/cheat/edit.html
@@ -1,20 +1,24 @@
 <!doctype html>
+<!--suppress ALL -->
 <html lang="en">
 <head th:replace="fragment/headTag"></head>
+<style>
+  [v-cloak] { display: none }
+</style>
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;" id="app">
+  <div v-cloak class="row" style="margin-top:150px;" id="app">
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#" th:text="'主题速查（' + ${subject.name} + '）'" th:attr="subjectId=${subject.id}" id="subjectId">主题速查</a>
+        <a class="navbar-brand text-secondary" href="#" th:text="'主题速查（' + ${subject.name} + '）'" th:attr="subjectId=${subject.id}" id="subjectId">主题速查</a>
         <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#newModal">添加sheet</a>
       </nav>
 
       <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-top">
         <div v-for="cheat in cheats" class="card" style="width:360px;">
           <div class="card-header border-bottom-0">
-            Building an App
+            {{cheat.title}}
             <div class="btn-group float-right">
               <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 设置
@@ -27,9 +31,9 @@
           </div>
           <div class="card-body">
             <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Cras justo odio</span>
-                <span>Cras justo odio</span>
+              <li v-for="item in cheat.content" class="list-group-item d-flex justify-content-between align-items-center">
+                <span>{{item.key}}</span>
+                <span class="text-primary">{{item.value}}</span>
               </li>
             </ul>
           </div><!--cardbody-end-->
@@ -60,7 +64,7 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">编辑导航</h5>
+                  <h5 class="modal-title">编辑sheet</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -68,13 +72,22 @@
                 <div class="modal-body">
                   <form>
                     <div class="form-group">
-                      <label for="recipient-name" class="col-form-label">卡片正面:</label>
-                      <input type="text" class="form-control" v-model="editingCheat.question">
+                      <label for="recipient-name-1" class="col-form-label">title:</label>
+                      <input type="text" class="form-control" id="recipient-name-1" v-model="editingCheat.title">
                     </div>
                     <div class="form-group">
-                      <label for="message-text" class="col-form-label">卡片反面:</label>
-                      <textarea class="form-control" v-model="editingCheat.answer"></textarea>
+                      <label for="" class="col-form-label">key-value:</label>
+                      <!--<textarea class="form-control" id="message-text" v-model="content"></textarea>-->
                     </div>
+                    <ul class="list-group">
+                      <li v-for="item in editingCheat.content" class="list-group-item d-flex justify-content-between align-items-center">
+                        <input type="text" class="form-control" v-model="item.key">
+                        <input type="text" class="form-control" v-model="item.value">
+                        <button type="button" class="btn btn-danger btn-md ml-1" v-if="content.length > 1" @click="removeItem(item)"><span class="oi oi-delete"></span></button>
+                      </li>
+                    </ul>
+                    <br>
+                    <button type="button" class="btn btn-primary btn-sm btn-block"  @click="addItem(editingCheat.content)">添加key-value</button>
                   </form>
                 </div>
                 <div class="modal-footer">
@@ -109,14 +122,14 @@
                     <!--<textarea class="form-control" id="message-text" v-model="content"></textarea>-->
                   </div>
                   <ul class="list-group">
-                    <li v-for="item in content" v-model="content" class="list-group-item d-flex justify-content-between align-items-center">
+                    <li v-for="item in content" class="list-group-item d-flex justify-content-between align-items-center">
                       <input type="text" class="form-control" v-model="item.key">
                       <input type="text" class="form-control" v-model="item.value">
                       <button type="button" class="btn btn-danger btn-md ml-1" v-if="content.length > 1" @click="removeItem(item)"><span class="oi oi-delete"></span></button>
                     </li>
                   </ul>
                   <br>
-                  <button type="button" class="btn btn-primary btn-sm btn-block"  @click="addItem">添加key-value</button>
+                  <button type="button" class="btn btn-primary btn-sm btn-block"  @click="addItem(content)">添加key-value</button>
                 </form>
               </div>
               <div class="modal-footer">
@@ -133,21 +146,13 @@
   </div>
 </div>
 <script>
-  // Object.prototype.getKeyByValue = function( value ) {
-  //   for( var prop in this ) {
-  //     if( this.hasOwnProperty( prop ) ) {
-  //       if( this[ prop ] === value )
-  //         return prop;
-  //     }
-  //   }
-  // }
   var app = new Vue({
     el: '#app',
     data: {
       cheats:[],
       editingCheat:{},
       title:'',
-      content:[{'key':'aaa','value':'ccc'}],
+      content:[{'key':'','value':''}],
       message:'',
       messageShow:false,
     },
@@ -155,11 +160,14 @@
       this.$http.post('/cheat/list', {
         subjectId:$('#subjectId').attr("subjectId"),
       }, {emulateJSON: true}).then(response => {
-        console.log(response.body)
+        console.log(response.body.obj)
         if(response.body.success) {
           this.messageShow = true;
           this.message = response.body.msg;
           this.cheats = response.body.obj;
+          for (var i=0,length = this.cheats.length; i < length; i++) {
+            this.cheats[i].content = JSON.parse(this.cheats[i].content);
+          }
         } else {
           this.messageShow = true;
           this.message = response.body.msg;
@@ -170,8 +178,9 @@
       });
     },
     methods: {
-      addItem: function () {
-        this.content.push({"key":"","value":""});
+      addItem: function (curContent) {
+        console.log(curContent)
+        curContent.push({"key":"","value":""});
       },
       removeItem: function (obj) {
         var index = this.content.indexOf(obj);
@@ -179,7 +188,6 @@
       },
       add: function () {
         console.log(JSON.stringify(this.content))
-        return;
         this.$http.post('/cheat/add', {
           subjectId:$('#subjectId').attr("subjectId"),
           title:this.title,
@@ -190,9 +198,10 @@
           if(response.body.success) {
             this.messageShow = true;
             this.message = response.body.msg;
+            response.body.obj.content = JSON.parse(response.body.obj.content)
             this.cheats.push(response.body.obj);
             this.title = '';
-            this.content = {};
+            this.content = [{'key':'','value':''}];
           } else {
             this.messageShow = true;
             this.message = response.body.msg;
@@ -226,7 +235,7 @@
         this.editingCheat = obj;
       },
       saveEdit: function (cheat) {
-        this.$http.post('/chaet/saveEdit', {
+        this.$http.post('/cheat/saveEdit', {
           id:this.editingCheat.id,
           title:this.editingCheat.title,
           content:JSON.stringify(this.editingCheat.content)
